--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Ahmed Haque",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8"
+    "body-parser": "^1.15.1",
+    "express": "^4.13.4",
+    "mongoose": "^4.4.20",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-router": "^2.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
